--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
   ],
   "license": "GPL-3.0-or-later",
   "require": {
-    "gplcart/composer-module-installer": "*"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+    "gplcart/composer-module-installer": "^1",
+    "ezyang/htmlpurifier": "4.9.2"
+  }
 }
